another spacing fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,7 @@
     font-size: 14px;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 
